Fixed spacing between headline and content on mobile version

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -308,8 +308,8 @@ section#subjects article h3 {
 section#subjects article p {
 	margin: 0;
 	color: @color_grey;
-	padding-bottom: 1em;
 	font-size: 1.2rem;
+	margin-top: 2rem;
 }
 
 section#subjects article ul {
